# deborrow

./: Cargo.toml  README.md
deborrow-macro/: Cargo.toml
deborrow-macro/src/: lib.rs
examples/: bad.rs  good.rs  normal.rs  reference.rs
src/: lib.rs  reference.rs
