[package]
name = "deborrow"
version = "0.3.1"
edition = "2021"
license = "CC0-1.0"
description = "Splits mutable references safely into their fields, and helps with reference manipulation."
repository = "https://github.com/tudbut/deborrow"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
deborrow-macro = { path = "./deborrow-macro", version = "0.2" }
