[package]
name = "deborrow-macro"
version = "0.1.0"
edition = "2021"
license = "CC0-1.0"
description = "Macros for deborrow"
repository = "https://github.com/tudbut/deborrow"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# deborrow is needed but crates.io has issues with that